[gd_scene load_steps=4 format=2]

[ext_resource path="res://Login_Screen/Login_Screen.gd" type="Script" id=1]
[ext_resource path="res://Base_Systems/Base_Parts/Game_Button.gd" type="Script" id=2]
[ext_resource path="res://Base_Systems/Base_Parts/Theme/Game_Theme.tres" type="Theme" id=3]

[node name="Background" type="Panel"]
margin_right = 1200.0
margin_bottom = 900.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login_Name" type="LineEdit" parent="."]
margin_left = 450.0
margin_top = 350.0
margin_right = 750.0
margin_bottom = 400.0
placeholder_text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login_Password" type="LineEdit" parent="."]
margin_left = 450.0
margin_top = 410.0
margin_right = 750.0
margin_bottom = 460.0
placeholder_text = "Passwort"

[node name="Login_Button" type="Button" parent="."]
margin_left = 450.0
margin_top = 470.0
margin_right = 590.0
margin_bottom = 510.0
text = "Login"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Register_Button" type="Button" parent="."]
margin_left = 610.0
margin_top = 470.0
margin_right = 750.0
margin_bottom = 510.0
text = "Registrieren"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feedback_Note" type="Label" parent="."]
margin_left = 400.0
margin_top = 570.0
margin_right = 800.0
margin_bottom = 615.0
custom_colors/font_color = Color( 0.647059, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
